# sparky

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG_GRAPH_INTELLIGENCE.md  CLI_COMMAND_CONSOLIDATION.md  DOCKER_SETUP.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  SESSION_SUMMARY.md  SPEECH_MODELS_FIX_SUMMARY.md  STANDALONE_TASK_SERVER_REMOVAL.md  TASK_CHAT_INTEGRATION.md  WEBSOCKET_DISCONNECT_FIX.md  WEBSOCKET_FIXES.md  WEBSOCKET_RECONNECTION.md  WEBSOCKET_TASK_UPDATES.md  WHISPER_CACHE_FIX.md  agents.md  docker-compose.yml
agent/: CONSOLIDATION_COMPLETE.md  GRAPH_INTEGRATION_PLAN.md  README.md  activity_log.txt  mcp.example.json  pyproject.toml  pytest.ini  scheduled_tasks.yaml  simplified_tasks.txt
agent/docs/: TOOL_FIXES_SUMMARY.md  agent_development_guide.md  knowledge_graph_fixes.md
agent/docs/architecture/: MIDDLEWARE_ARCHITECTURE.md  architecture.md  architecture_overview.md
agent/docs/clients/: client-implementation-summary.md  textual_client.md
agent/docs/code_organization/: code_organization.md
agent/docs/core/: async_util.md  bot.md  capabilities.md  chat_server.md  cli.md  constants.md  context_management.md  diff_edit.md  event_types.md  history.md  initialization.md  logging_config.md  search_replace.md  token_budget.md  tool_usage.md  ws_models.md
agent/docs/identity/: identity-loading-with-prompts.md  identity.md
agent/docs/knowledge_graph/: knowledge.md  knowledge_graph.md
agent/docs/mcp/: toolchain_caching.md
agent/docs/middleware/: MESSAGE_MIDDLEWARE.md  QUICK_START_MIDDLEWARE.md  resource-appending-example.md  resource-fetching-middleware.md
agent/examples/: command_middleware_example.py  resource_middleware_example.py
agent/prompts/: alignment_prompt.md  analyze_git_commit.md  concept_workflow.md  curation_prompt.md  curiosity_prompt.md  gardener_prompt.md  identity_prompt.md  integrated_reflection_prompt.md  metacognition_prompt.md  reflection_prompt.md  smart_maintenance_prompt.md  workflow_discovery_prompt.md
agent/scripts/: assign_admin_role.py  check_duplicate_messages.py  cleanup_duplicate_messages.py  cleanup_duplicate_task_chats.py  init-sparky-db.sql  migrate_existing_users.py  run_session_migration.py  update_and_restart.sh
agent/tests/: README_TESTING.md  conftest.py  docblock_test.py  minimal_test.py
(+293 files in other folders)
